Added Home pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet> 
+<div class="app">
+    <header>
+        <img src="assets/img/logo.png" alt="">
+        <div class="nav-items">
+            <button class="selected">Home</button>
+            <button>Services</button>
+            <button>Tools</button>
+            <button>About us</button>
+            <button>Contact us</button>
+        </div>
+    </header>
+    <router-outlet></router-outlet>
+</div>
+
