--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,38 +1,20 @@
-<div class="app">
-  <header>
-    <img src="assets/img/logo.png" alt="">
-    <div class="nav-items">
-      <button class="selected">Home</button>
-      <button>Services</button>
-      <button>Tools</button>
-      <button>About us</button>
-      <button>Contact us</button>
-    </div>
-  </header>
-  <div class="row">
-    <div class="col col-6">
-      <div class="main-content">
-        <h3>Large Number of
-          Freight Was Makes Us
-          Powerful</h3>
-        <div class="card login-card">
-          <div class="card-body">
-            <!-- <h5 class="card-title">Login</h5> -->
-            <input placeholder="email" type="email">
-            <input placeholder="password" type="password">
-            <select>
-              <option disabled>You Are</option>
-              <option value="1">Agent</option>
-              <option value="2">Customer</option>
-            </select>
-            <button class="btn">Login</button>
-          </div>
+
+<div class="row m-0">
+    <div class="col-2 p-0">
+        <div class="side-menu">
+            <p>Home</p>
+            <ul>
+                <li [routerLinkActive]="'selected'" (click)="openPage('dashboard/network')">Network</li>
+                <li (click)="openPage('dashboard/asset')">Asset</li>
+                <li (click)="openPage('dashboard/query-form')">Query Form</li>
+                <li (click)="openPage('dashboard/quotation-form')">Quotation Form</li>
+                <li (click)="openPage('dashboard/sales-quote')">Sales Quote</li>
+            </ul>
         </div>
-      </div>
 
     </div>
-    <div class=" col col-6">
-      <img class="main-img" src="assets/img/backgroud.jpg" alt="">
+    <div class="col-10">
+        <router-outlet></router-outlet>
     </div>
-  </div>
+
 </div>
