--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,85 +1,30 @@
-.app {
-  padding: 10px;
+.side-menu {
+  height: calc(92vh - 65px);
+  border-right: 1px solid #efefef;
 
-  header {
-    height: 60px;
-
-    .nav-items {
-      display: inline-block;
-      float: right;
-
-      button {
-        border: none;
-        margin: 16px 10px 5px 10px;
-        background: transparent;
-        font-size: 20px;
-        outline: none;
-        color: #018cd6;
-      }
-
-      .selected {
-        border-bottom: 2px solid #f57f41;
-      }
-
-      .outline-login {
-        background: #018cd6;
-        color: #fff;
-        border-radius: 30px;
-        padding: 2px 1.5rem;
-      }
-    }
-  }
-}
-
-.main-img {
-  object-fit: contain;
-  width: 100%;
-}
-
-.main-content {
-  padding: 1rem;
-
-  h3 {
-    margin-top: 3rem;
-    font-size: 30px;
+  p {
     text-align: center;
-    color: #018cd6;
+    padding-top: 2rem;
+    color: #1791d8;
+    font-weight: bold;
+    font-size: 1.5rem;
+
   }
 
-  .login-card {
-    width: 320px;
-    margin: auto;
-    margin-top: 3rem;
+  ul {
+    padding: 0 16px;
+    list-style: none;
 
-    .card-title {
-      text-align: center;
-      font-weight: 700;
+    li {
+      padding: 15px 5px;
       color: #018cd6;
-      font-size: 20px;
+      margin: 2px 0;
+      cursor: pointer;
+      font-size: 17px;
     }
-
-    input,
-    select {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      background: #fff;
-      height: 34px;
-      padding: 2px 10px;
-      outline: none;
-    }
-    select:disabled{
-      opacity: 0.5;
-    }
-
-    .btn {
-      margin-top: 1rem;
-      background: #018cd6;
-      color: #fff;
-      width: 100%;
+    .selected{
+        color: #f17e3c;
+        font-weight: bold;
     }
   }
-
-
 }
