--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -34,6 +34,6 @@
   
     </div>
     <div class=" col col-6">
-        <img class="main-img" src="assets/img/background.jpg" alt="">
+        <img class="main-img" src="assets/img/background.png" alt="">
     </div>
   </div>
