--- a/src/app/dashboard/pages/network/network.component.html
+++ b/src/app/dashboard/pages/network/network.component.html
@@ -1,1 +1,78 @@
-<p>network works!</p>
+<div class="action-bar">
+    <input placeholder="Search here" type="text">
+    <button class="search">Search</button>
+    <button class="add">Add</button>
+
+</div>
+
+<div class="row m-0 head">
+    <div class="col-2">Register ID</div>
+    <div class="col-4">Company Name</div>
+    <div class="col-3">Email</div>
+    <div class="col-2">Created By</div>
+    <div class="col-1 filter"> <button><img src="assets/icon/filter.svg" alt=""></button></div>
+
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Hindustan Pvt ltd</div>
+    <div class="col-3">hindustan@gmail.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Salient Container Line Pvt Ltd</div>
+    <div class="col-3">salient.container@gmail.com</div>
+    <div class="col-2">Admin</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Balagi Logistic</div>
+    <div class="col-3">balagi@outlook.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Hindustan Pvt ltd</div>
+    <div class="col-3">hindustan@gmail.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Loadbook Pvt ltd</div>
+    <div class="col-3">loadbook@gmail.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">St Courier & Dtdc Courier Pvt ltd</div>
+    <div class="col-3">courier@gmail.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Mr.Highway Pvt ltd</div>
+    <div class="col-3">highway.mr@gmail.com</div>
+    <div class="col-2">Admin</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Hindustan Pvt ltd</div>
+    <div class="col-3">hindustan@gmail.com</div>
+    <div class="col-2">Manager</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
+<div class="row m-0 data">
+    <div class="col-2">#00123345</div>
+    <div class="col-4">Salient Container Line Pvt Ltd</div>
+    <div class="col-3">salient.container@gmail.com</div>
+    <div class="col-2">Admin</div>
+    <div class="col-1 action-btn"><button (click)="viewDetail()">View</button></div>
+</div>
