--- a/src/app/dashboard/pages/network-detail/network-detail.component.html
+++ b/src/app/dashboard/pages/network-detail/network-detail.component.html
@@ -1,53 +1,53 @@
 <div class="detail-head">
     <h1>Network Detail</h1>
     <div class="action">
-        <button class="edit" (click)="toggleEdit()">Edit</button>
+        <button class="edit" (click)="toggleEdit()">{{isEdit?'Save':'Edit'}}</button>
         <button class="delete">Delete</button>
     </div>
 
 </div>
-<div class="row detail-body">
+<div class="row detail-body" [class.activate-edit]="!isEdit">
     <div class="col-4">
         <p>Name of the Company</p>
-        <input type="text">
+        <input type="text" value="Hindustan Pvt ltd">
     </div>
 
     <div class="col-4">
         <p>Contact Person
         </p>
-        <input type="text">
+        <input type="text" value="HR">
     </div>
     <div class="col-4">
         <p>Address of the Company</p>
-        <textarea type="text"></textarea>
+        <textarea type="text" value="no 10 vanthavasi , chennai"></textarea>
     </div>
     <div class="col-4">
         <p>Email Pricing</p>
-        <input type="text">
+        <input type="text" value="hindustan@gmail.com">
     </div>
     <div class="col-4">
         <p>Email Accounts
         </p>
-        <input type="text">
+        <input type="text" value="hindustan@gmail.com">
     </div>
     <div class="col-4">
         <p>Email Manager
         </p>
-        <input type="text">
+        <input type="text" value="hindustan@gmail.com">
     </div>
     <div class="col-4">
         <p>Email Accounts
         </p>
-        <input type="text">
+        <input type="text" value="hindustan@gmail.com">
     </div>
     <div class="col-4">
         <p>Purchase Date
         </p>
-        <input type="text">
+        <input type="text" value="12/12/2019">
     </div>
     <div class="col-4">
         <p>Expiry Date
         </p>
-        <input type="text">
+        <input type="text" value="12/12/2019">
     </div>
 </div>
