--- a/src/app/dashboard/pages/network-detail/network-detail.component.scss
+++ b/src/app/dashboard/pages/network-detail/network-detail.component.scss
@@ -50,3 +50,12 @@
     margin-bottom: 10px;
   }
 }
+
+.activate-edit {
+
+  input,
+  textarea {
+    cursor: pointer;
+    pointer-events: none;
+  }
+}
